# ChangeLog for x11-plugins/gkrellmms
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.51 2006/11/24 23:25:16 drizzt Exp $

  24 Nov 2006; Timothy Redaelli <drizzt@gentoo.org>
  gkrellmms-2.1.22-r1.ebuild:
  Fixed description, thx to jakub

  22 Nov 2006; Timothy Redaelli <drizzt@gentoo.org>
  gkrellmms-2.1.22-r1.ebuild:
  Removed XMMS from description (thanks to Flameeyes for reporting).

*gkrellmms-2.1.22-r1 (21 Nov 2006)

  21 Nov 2006; Timothy Redaelli <drizzt@gentoo.org>
  +files/gkrellmms-2.1.22-audacious.patch,
  +files/gkrellmms-2.1.22-ldflags.patch, metadata.xml,
  +gkrellmms-2.1.22-r1.ebuild:
  Readded gkrellmms with patch to make it works with audacious,
  thanks to Sascha Hlusiak for bug #152890.

  18 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gkrellmms-2.1.22.ebuild:
  ppc stable, bug #102121

  11 Jun 2006; Tony Vroon <chainsaw@gentoo.org> gkrellmms-2.1.22.ebuild:
  Remove references to beep-media-player, which is no longer in the tree.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  gkrellmms-2.1.21.ebuild:
  Stable on ppc.

*gkrellmms-2.1.22 (18 May 2005)

  18 May 2005; Martin Holzer <mholzer@gentoo.org> +gkrellmms-2.1.22.ebuild:
  Version bumped. Closes 82738. Thx to <andrewdk@sbcglobal.net>

  14 May 2005; Bryan Østergaard <kloeri@gentoo.org>
  gkrellmms-2.1.21.ebuild:
  Stable on alpha.

  06 May 2005; Sven Wegener <swegener@gentoo.org> gkrellmms-2.1.15.ebuild,
  gkrellmms-2.1.21.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org> gkrellmms-2.1.21.ebuild:
  multilib fixes

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> gkrellmms-2.1.21.ebuild:
  stable on amd64

  30 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> gkrellmms-2.1.21.ebuild:
  Stable on sparc

  28 Mar 2005; Martin Holzer <mholzer@gentoo.org> gkrellmms-2.1.21.ebuild:
  x86 stable.
