@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/gkrellmms-2.1.22-r1.ebuild,v 1.3 2006/11/24 23:25:16 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/gkrellmms-2.1.22-r1.ebuild,v 1.4 2007/02/05 15:46:39 armin76 Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -13,7 +13,7 @@ DEPEND=">=app-admin/gkrellm-2
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~alpha ~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ppc ~sparc x86"
 
 S="${WORKDIR}"/${PN}
 
