@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellmms
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.51 2006/11/24 23:25:16 drizzt Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellmms/Attic/ChangeLog,v 1.52 2007/02/05 15:46:39 armin76 Exp $
+
+  05 Feb 2007; Raúl Porcel <armin76@gentoo.org> gkrellmms-2.1.22-r1.ebuild:
+  x86 stable wrt bug 151446
 
   24 Nov 2006; Timothy Redaelli <drizzt@gentoo.org>
   gkrellmms-2.1.22-r1.ebuild:
